feat: crud for save a customer
